radix-engine-tests/tests/dec_macros/src/pdec_err_expected_expr.stderr
error: expected expression
 --> src/pdec_err_expected_expr.rs:4:29
  |
4 |     const X: Decimal = dec!(.1);
  |                             ^
